cleanup [vfs]: minor optimization; typos; formatting
GitOrigin-RevId: f60868b87e4b3697d9c3ff6927af8aa0342ee03f